@@ -904,10 +904,21 @@ function [style, typ, with] = do_linestyle_command (obj, idx, plot_stream)
       otherwise
 	lt = "";
     endswitch
-    if (! isempty (lt))
-      fprintf (plot_stream, " linetype %s", lt);
-      found_style = true;
-    endif
+
+    ## FIXME -- linetype is currently broken, since it disables the
+    ## gnuplot default dashed and solid linestyles with the only
+    ## benefit of being able to specify '--' and get a single sized
+    ## dashed line of identical dash pattern for all called this way.
+    ## All dash patterns are a subset of "with lines" and none of the
+    ## lt specifications will correctly propagate into the x11 terminal
+    ## or the print command.   Therefore, it is currently disabled in
+    ## order to allow print (..., "-dashed") etc. to work correctly.
+
+    ##    if (! isempty (lt))
+    ##      fprintf (plot_stream, " linetype %s", lt);
+    ##      found_style = true;
+    ##    endif
+
   else
     lt = "";
   endif
